# open-yoc

./: .gitattributes  .yoc  README.md  SConstruct
components/alg_asr_lyeva/: CMakeLists.txt  README.md  lyeva_asr_process.cc  package.yaml
components/alg_asr_lyeva/include/: aie_mem_pool.h  alg_register.h  ly_asr.h  ly_preprocess.h
components/alg_asr_lyeva/nlu/: asr_nlu.c
components/alg_asr_lyeva/nlu/include/: asr_nlu.h
components/amrnb/: CMakeLists.txt  README.md  package.yaml  publish.sh
components/amrnb/src/dec/: Android.bp
components/amrnb/src/enc/: Android.bp
components/amrwb/: CMakeLists.txt  README.md  package.yaml  patent_disclaimer.txt
components/amrwb/src/: pvamrwbdecoder_basic_op_cequivalent.h
components/aos/: CMakeLists.txt  README.md  package.yaml
components/aos/include/aos/: aos.h  cli.h  console_uart.h  crc16.h  debug.h  errno.h  hash.h  integer.h  kernel.h  kv.h  list.h  log.h  osal_debug.h  queue.h  ringblk_buf.h  ringbuffer.h  types.h  version.h  wdt.h  yloop.h
components/aos/include/devices/: adc.h  apdu_uart.h  at_module.h  at_uart.h  audio.h  battery.h  console_uart.h  device.h  driver.h  flash.h  gnss.h  gprs.h  hci.h  iic.h  led.h  nbiot.h  netdrv.h  sensor.h  sound.h  uart.h  usrsock.h  wifi.h
components/aos/include/yoc/: init.h  lpm.h  manifest_info.h  nvram.h  partition.h  sysinfo.h  uservice.h  yoc.h
components/aos/src/: aos_cli.c  aos_porting.c  cli_service.c  console_uart.c  crc16.c  except.c  hash.c  kernel.c  kv.c  list.c  lpm.c  main.c  manifest_info.c  mm.c  network.c  partition.c  ringblk_buf.c  ringbuffer.c  select.c  settings_ali.c  softwdt.c  sys_arch.c  sysinfo.c  syslog.c  ustdio.c
components/aos/src/cplusplus/: crt.cpp  crt.h  crt_init.c
components/aos/src/devices/: adc.c  apdu_uart.c  battery.c  console_uart.c  device.c  flash.c  gnss.c  gprs.c  hci.c  iic.c  led.c  nbiot.c  netdrv.c  sensor.c  uart.c  usrsock.c  wifi.c
components/aos/src/eventloop/: evtloop_device.c  evtloop_event.c  evtloop_main.c  evtloop_main.h  yloop.c
components/aos/src/uService/: event.c  event_svr.c  internal.h  rpc.c  uservice.c  utask.c
components/av/: CMakeLists.txt  README.md  package.yaml
components/av/aef/: aef.c  aef_all.c  aef_ipc.c  aef_sona.c  eq.c  eq_all.c  eq_ipc.c  eq_sona.c
components/av/aef/ck803ef/: readme.txt
components/av/aef/ck804ef/: ReadMe.txt
components/av/aef/ck805ef/: ReadMe.txt
components/av/atempo/: atempo.c  atempo_all.c  atempo_ipc.c  atempo_sonic.c
components/av/avcodec/: ad.c  ad_adpcm.c  ad_alaw.c  ad_amrnb.c  ad_amrwb.c  ad_fdkaac.c  ad_flac.c  ad_ipc.c  ad_mulaw.c  ad_opus.c  ad_pcm.c  ad_pvmp3.c  ad_speex.c  ad_tmall.c  avcodec_all.c
components/av/avfilter/: avfilter.c  avfilter_aef.c  avfilter_atempo.c  avfilter_atempo2.c  avfilter_eq.c  avfilter_swr.c  avfilter_vol.c
components/av/avformat/: adts_rw.c  amr_rw.c  asf_rw.c  avformat_all.c  avformat_utils.c  avparser.c  avparser_adts.c  avparser_all.c  avparser_mp3.c  demux.c  demux_adts.c  demux_amr.c  demux_asf.c  demux_flac.c  demux_mp3.c  demux_mp4.c  demux_ogg.c  demux_rawaudio.c  demux_ts.c  demux_wav.c  flac_rw.c  m4a_rw.c  mp3_rw.c  ogg_rw.c  riff_rw.c  ts_rw.c
components/av/avutil/: av_errno.c  avframe.c  avpacket.c  bio.c  byte_rw.c  dict.c  dync_buf.c  lc_fifo.c  mem_block.c  misc.c  named_fifo.c  named_straightfifo.c  path.c  sf.c  socket_rw.c  straight_fifo.c  url_encode.c  url_parse.c  vol_scale.c  web.c  web_url.c
components/av/icore/: icore_msg.c
components/av/include/: media.h  player.h  player_ioctl.h
components/av/mca/: cmca.c  mca.c  mca_all.c  mca_ipc.c  mca_local.c
components/av/media/: Readme_media.md  media.c
components/av/output/: ao.c  ao_alsa.c  ao_ipc.c  mixer.c  mixer_channel.c  output_all.c
components/av/player/: Readme_player.md  player.c
components/av/stream/: stream.c  stream_all.c  stream_crypto.c  stream_fifo.c  stream_file.c  stream_hls.c  stream_http.c  stream_http_api.c  stream_mem.c
components/av/swresample/: aformat_conv.c  pcm_convert.c  resample.c  resample_all.c  resample_ipc.c  resample_silan.c  resample_speex.c  swresample.c
components/av/tfft/: fft.c  fft_all.c  fft_ipc.c  fft_speex.c
components/cxvision/: CMakeLists.txt  CMakeLists.txt.dbg  README.md  cmake_build.sh  package.yaml  toolchain_file.cmake
components/cxvision/cxvision/: byteorder.h  cxvision.h
components/dbus_knife/: CMakeLists.txt  README.md  package.yaml
components/dbus_knife/src/: kdbus_buf.c  kdbus_introspect.c  kdbus_utils.c
components/flac/: CMakeLists.txt  README.md  package.yaml
components/flac/src/: config.h
components/mpegts/: CMakeLists.txt  README.md  package.yaml
components/mpegts/src/: bytes_io.cpp  ts_demuxer.cpp  ts_format.cpp  ts_frame.cpp  ts_misc.c  ts_muxer.cpp
components/ogg/: CMakeLists.txt  README.md  package.yaml
components/opus/: CMakeLists.txt  README.md  config.h  package.yaml
components/opus/celt/: arch.h  float_cast.h  mathops.h  mdct.c
components/posto/: CMakeLists.txt  CMakeLists.txt.dbg  README.md  cmake_build.sh  package.yaml
components/posto/posto/: posto.h
components/pvmp3dec/: CMakeLists.txt  README.md  package.yaml  patent_disclaimer.txt
components/pvmp3dec/src/: pvmp3_dct_16.cpp  pvmp3_dct_9.cpp  pvmp3_decode_huff_cw.cpp  pvmp3_stereo_proc.cpp
components/sonic/: CMakeLists.txt  package.yaml  sonic.c
components/speex/: CMakeLists.txt  package.yaml
components/speex/src/: bits.c  modes.c  modes_wb.c  speex.c  speex_callbacks.c  speex_header.c  stereo.c  vorbis_psy.c
components/speexdsp/: CMakeLists.txt  README.md  package.yaml
components/speexdsp/src/: buffer.c  mdf.c  resample.c  scal.c  testdenoise.c  testjitter.c  testresample.c  testresample2.c
components/tmedia_backend_seno/: CMakeLists.txt  package.yaml
components/tmedia_backend_seno/src/: init.cpp
components/tmedia_core/: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.yaml
components/uservice/: CMakeLists.txt  README.md  package.yaml
components/uservice/src/: event.c  event_svr.c  internal.h  rpc.c  uservice.c  utask.c
(+10769 files in other folders)
