CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE(../../cmake/toolchain.cmake)

# include
INCLUDE_DIRECTORIES(./include)

ADD_DEFINITIONS(
    -DHAVE_CONFIG_H
)

SET(LIBSOURCE 
	src/bitwise.c
	src/framing.c
)

ADD_LIBRARY(ogg ${LIBSOURCE})

INSTALL(TARGETS ogg DESTINATION ${INSTALL_PATH}/lib)
INSTALL(DIRECTORY ./include DESTINATION ${INSTALL_PATH}/include)


